[package]
name = "luna"
version = "0.7.0"
authors = ["SAoirse <https://github.com/xaoirse>"]
description = "A Recon Tool"
readme = "README.md"
edition = "2021"
repository = "https://github.com/xaoirse/luna"


[workspace]
members = [
    "model",
    "luna-core"
]

[[bin]]
path = "luna-core/src/main.rs"
name = "luna-core"

[lib]
name = "model"
path = "model/src/lib.rs"

[dependencies]
openssl = { version = "*", features = ["vendored"] } # https://docs.rs/openssl/0.10.36/openssl/#vendored
log = "0.4"
env_logger = "0.8.4"
colored = "2"
chrono = "0.4"
clap = { version = "3.1", features = ["derive","suggestions", "color","wrap_help" ] }
regex = "1.5.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
rayon = "1.5"
cidr = "0.2.1"
signal-hook = "*"
indicatif = {version = "0.17.0-rc.5", features = ["rayon"]}
url = "2.2.2"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benchmarks"
harness = false

[[test]]
name = "integration"
path = "tests/integration_tests.rs"