[package]
name = "luna"
version = "0.9.0"
authors = ["SAoirse <https://github.com/xaoirse>"]
description = "A Reconnaissance Tool"
readme = "README.md"
edition = "2021"
repository = "https://github.com/xaoirse/luna"


[workspace]
members = [
    "crates/model",
    "crates/dnsgen"
]

[dependencies]
openssl = { version = "*", features = ["vendored"] } # https://docs.rs/openssl/0.10.36/openssl/#vendored
log = "0.4"
env_logger = "0.9"
colored = "2"
clap = { version = "3.2", features = ["derive", "suggestions", "color", "wrap_help"] }
rayon = "1.5"
signal-hook = "*"
model = { path = "crates/model" }
dnsgen =  { path = "crates/dnsgen" }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benchmarks"
harness = false

[[test]]
name = "integration"
path = "tests/integration_tests.rs"

[[bin]]
name = "luna"
path = "crates/cli/main.rs"
